fixed issue of not showing some containers

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,10 @@
 
 .search-bar{
   margin-bottom: 150px;
-
   margin-top: 50px;
   
 }
+
 
 .search-input{
   font-size: 24px;
@@ -58,6 +58,11 @@
 }
 
 .image-container{
-  width: 30%;
+  width: 60%;
   margin-bottom: 45px;
+  margin-left: 30px;
+  padding-right: 30px;
+}
+.links-issue{
+  color:#61dafb;
 }
